attempt to fix mobile overflow issue and adjust about section text size; section padding and minheight

--- a/style.css
+++ b/style.css
@@ -39,8 +39,9 @@ body {
 }
 
 section {
-    padding: 20px;
-    min-height: 300px;
+    /* padding: 20px; */
+    padding: 5% 0;
+    /* min-height: 300px; */
     background-size: cover;
     background-position: center;
     text-align: center;
@@ -257,6 +258,7 @@ section {
     }
     .grid-item{
         height: auto;
+        /* height: 200px */
     }
 }
 
@@ -315,9 +317,17 @@ section {
 }
 
 @media (max-width: 768px) {
+    .about-subsection {
+        padding: 10px;
+        font-size: 0.8em;
+    }
     .about-main-content {
         max-width: 90%;
         padding: 10px;
+        font-size: 0.8em;
+    }
+    .about-main-content ul {
+        margin-left: 10px;
     }
 }
 
